Fix alignment issue on profile edit state selection

--- a/src/ng-app/app/profile-details-edit/profile-details-edit.component.scss
+++ b/src/ng-app/app/profile-details-edit/profile-details-edit.component.scss
@@ -88,6 +88,7 @@
 
             mat-button-toggle-group {
                 transform: scale(0.8);
+                transform-origin: left;
 
                 mat-button-toggle {
                     font-size: 1.6em;
